--- a/ar0822-overlay.dts
+++ b/ar0822-overlay.dts
@@ -57,7 +57,7 @@
 						data-lanes = <1 2>;
 						clock-noncontinuous;
 						link-frequencies =
-							/bits/ 64 <960000000>;
+							/bits/ 64 <480000000 960000000>;
 					};
 				};
 			};
@@ -97,6 +97,7 @@
 			   <&clk_frag>, "target:0=",<&cam0_clk>,
 			   <&cam_node>, "clocks:0=",<&cam0_clk>,
 			   <&cam_node>, "vana-supply:0=",<&cam0_reg>;
+		link-frequency = <&cam_endpoint>,"link-frequencies#0";
 	};
 };
 
