--- a/ar0822-overlay.dts
+++ b/ar0822-overlay.dts
@@ -15,7 +15,7 @@
 
 	clk_frag: fragment@1 {
 		target = <&cam1_clk>;
-		__overlay__ {
+		cam_clk: __overlay__ {
 			status = "okay";
 			clock-frequency = <24000000>;
 		};
@@ -115,6 +115,7 @@
 
 	__overrides__ {
 		4lane = <0>, "-3+4-5+6";
+		clock-frequency = <&cam_clk>,"clock-frequency:0";
 		rotation = <&cam_node>,"rotation:0";
 		orientation = <&cam_node>,"orientation:0";
 		media-controller = <0>,"!102";
