--- a/ar0822-overlay.dts
+++ b/ar0822-overlay.dts
@@ -84,7 +84,7 @@
 						clock-lanes = <0>;
 						clock-noncontinuous;
 						link-frequencies =
-							/bits/ 64 <480000000 960000000>;
+							/bits/ 64 <480000000 492750000 960000000>;
 					};
 				};
 			};
